[package]
name = "debot-engine"
description = "Debot Engine library"
version = "0.1.0"
authors = ["tonlabs <support@tonlabs.io>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["TON", "DeBot"]

[dependencies]
base64 = "0.10.1"
chrono = "0.4"
hex = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.91"
log = "0.4.11"

ton-client-rs = { git = 'https://github.com/tonlabs/ton-client-rs.git', tag = "0.25.0" }
ton_sdk = { git = 'https://github.com/tonlabs/TON-SDK.git', tag = "0" }