[package]
name = "debot-engine"
description = "Debot Engine library"
version = "0.1.0"
authors = ["tonlabs <support@tonlabs.io>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
keywords = ["TON", "DeBot"]

[dependencies]
base64 = "0.10.1"
chrono = "0.4"
ed25519 = "1.0.1"
ed25519-dalek = "1.0.0-pre.4"
hex = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.91"
log = "0.4.11"

ton_sdk = { git = 'https://github.com/tonlabs/TON-SDK.git', branch = "1.0.0-rc" }
ton_client = { git = 'https://github.com/tonlabs/TON-SDK.git', branch = "1.0.0-rc" }

[dev-dependencies.tokio]
version = "0.2.13"
features = ["rt-threaded", "macros", "sync"]