[package]
name = "debot-engine"
description = "Debot Engine library"
authors = ["TON DEV SOLUTIONS LTD <support@tonlabs.io>"]
repository = "https://github.com/tonlabs/debot-engine"
documentation = "https://docs.ton.dev"
readme = "README.md"
license = "Apache-2.0"
keywords = ["DeBot", "TON", "debot engine"]
edition = "2018"
version = "0.1.2"

[dependencies]
base64 = "0.10.1"
chrono = "0.4"
ed25519 = "1.0.1"
ed25519-dalek = "1.0.0-pre.4"
hex = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.91"
log = "0.4.11"
num-bigint = "0.3"
num-traits = "0.2.12"

ton-client-rs = { git = 'https://github.com/tonlabs/ton-client-rs.git', tag = "0.26.0" }
ton_sdk = { git = 'https://github.com/tonlabs/TON-SDK.git', tag = "0" }